Added delete button to writer workspace

--- a/views/writer-workspace.handlebars
+++ b/views/writer-workspace.handlebars
@@ -28,7 +28,7 @@
                 <textarea class="textarea is-large" placeholder="Script text" id="script-text" required></textarea>
               </div>
             </div>
-            <div class="field is-grouped is-grouped-right">
+            <div class="field is-grouped is-grouped-right" id="workspace-buttons">
               <div class="control">
                 <button class="button is-success is-large has-text-light" id="publish-button"> 
                 Publish
@@ -50,6 +50,6 @@
       </div>
     </div>
   </main>
-
-  <script type="application/x-javascript" src="js/workspace.js"></script>
 </div>
+
+<script type="application/x-javascript" src="/js/workspace.js"></script>
