Fixed testimonials navigation styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,11 @@
   flex: 1;
 }
 
-
+.testimonial-column nav {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+}
 
 #menu-sidebar {
     background-color: #BABFCD;
