Added functionality to allow agent to browse by script title

--- a/views/agent-browse.handlebars
+++ b/views/agent-browse.handlebars
@@ -18,16 +18,16 @@
 
                 <div class="field is-grouped">
                     <label class="label">Search by:&nbsp;</label>
-                    <div class="control is-expended">
+                    {{!-- <div class="control is-expended">
                         <label class="radio">
                             <input type="radio" name="answer" id="genre" required />
                             Genre
                         </label>
-                    </div>
+                    </div> --}}
                     <div class="control">
                         <label class="radio">
-                            <input type="radio" name="answer" id="keyword" required />
-                            Keyword
+                            <input type="radio" name="answer" id="title" required />
+                            Title
                         </label>
                     </div>
                     <div class="control">
@@ -46,4 +46,4 @@
         </div>
     </main>
 </div>
-<script type="application/x-javascript" src="js/agent-browse.js"></script>
+<script type="application/x-javascript" src="/js/agent-browse.js"></script>
