--- a/views/partials/agent-menu.handlebars
+++ b/views/partials/agent-menu.handlebars
@@ -6,7 +6,7 @@
             <li><a {{#if purchased}}class="is-size-5 is-size-6-mobile is-active" {{else}}
                     class="is-size-5 is-size-6-mobile" {{/if}} href="/scripts/agent/purchased">Purchased Scripts</a></li>
 
-            <li><a class="is-size-5 is-size-6-mobile" href="/messages">Messages</a></li>
+            <li><a class="is-size-5 is-size-6-mobile" href="/messages">Messages (In Development)</a></li>
         </ul>
     </aside>
 </div>
