--- a/views/partials/writer-menu.handlebars
+++ b/views/partials/writer-menu.handlebars
@@ -4,7 +4,7 @@
             <li><a {{#if posted}}class="is-size-5 is-size-6-mobile is-active" {{else}}class="is-size-5 is-size-6-mobile"
                     {{/if}} href="/scripts/writer/posted">Posted Scripts</a></li>
             <li><a class="is-size-5 is-size-6-mobile" href="/writer/workspace">Workspace</a></li>
-            <li><a class="is-size-5 is-size-6-mobile" href="/messages">View Messages</a></li>
+            <li><a class="is-size-5 is-size-6-mobile" href="/messages">View Messages (In Development)</a></li>
         </ul>
     </aside>
 </div>
